--- a/Fooseshoes/Fooseshoes.WebSite/styles/footer.scss
+++ b/Fooseshoes/Fooseshoes.WebSite/styles/footer.scss
@@ -24,10 +24,17 @@
 
 #copyright{
     width:200px;
+    @media only screen and (min-width: 320px) and (max-width: 768px) {       
+    display:none;
+    }
 }
 
 #social-icons{
    display:flex;
+   @media only screen and (min-width: 320px) and (max-width: 768px) {       
+    justify-content:center;
+    }
+
 }
 
 #email-holder{
@@ -87,11 +94,13 @@
     display:flex;
     text-align:center;
     padding: 5px;
+    @media only screen and (min-width: 320px) and (max-width: 768px) {
+        display: none;
+    }
 }
 
 #email-for-news{
     font-family:Aller_BdIt;
-
     width: 180px;
     height: 35px;
     background-color:#2e2e2e;
@@ -99,6 +108,9 @@
     border: solid 1px #7d7d7d;
     border-radius: 0px;
     padding-left:5px;
+    @media only screen and (min-width: 320px) and (max-width: 768px) {
+        display: none;
+    }
 }
 
 #socials-nav{
@@ -109,17 +121,24 @@
     display: flex;
     border-top:solid 1px black;    
     height:100px;
-    display: flex;
-    justify-content:space-between;
+    @media only screen and (min-width: 320px) and (max-width: 768px) {
+        display:block;        
+    justify-content:center;
+    padding: 30px 20% 30px 20%;
+    }
 
     @media only screen and (min-width: 768px) and (max-width: 960px) {
       width: 768px;      
     padding: 30px 80px 30px 80px;
+    display: flex;    
+    justify-content:space-between;
     }
 
     @media only screen and (min-width: 960px) {
      width: 960px;     
     padding: 30px 100px 30px 100px;
+    display: flex;    
+    justify-content:space-between;
     }
 }
 
@@ -176,6 +195,10 @@
     color: #a4a4a4;
     display: flex;
     justify-content:space-between;
+
+    @media only screen and (min-width: 320px) and (max-width: 768px) {
+        display: none;
+    }
 
     @media only screen and (min-width: 768px) and (max-width: 960px) {
       width: 768px;      
