--- a/Fooseshoes/Fooseshoes.WebSite/css/navigation.css
+++ b/Fooseshoes/Fooseshoes.WebSite/css/navigation.css
@@ -1,11 +1,13 @@
 ﻿@media only screen and (min-width: 320px) and (max-width: 768px) {
+  #nav-dropdowns {
+    display: flex; }
   .nav-dropbtn {
     border-color: #eeeeee;
     border-style: solid;
     border-width: 1px;
     border-top: none;
     border-bottom: none;
-    padding: 14px 16px 14px 16px;
+    padding: 14px 14px 14px 16px;
     padding-left: 10px;
     padding-right: 10px;
     height: 45px;
@@ -26,6 +28,7 @@
     color: #c7c7c7;
     width: 90px; }
   .material-icons {
+    padding-bottom: 20px !important;
     color: #c7c7c7; }
   .nav-dropdown {
     position: relative;
@@ -39,11 +42,27 @@
     z-index: 1; } }
 
 @media only screen and (min-width: 768px) and (max-width: 960px) {
-  #nav-dropdown-el {
+  .nav-dropdowns {
     display: none; } }
 
 @media only screen and (min-width: 960px) {
-  #nav-dropdown-el {
+  .nav-dropdowns {
+    display: none; } }
+
+@media only screen and (min-width: 768px) and (max-width: 960px) {
+  .nav-dropdown a {
+    display: none; } }
+
+@media only screen and (min-width: 960px) {
+  .nav-dropdown a {
+    display: none; } }
+
+@media only screen and (min-width: 768px) and (max-width: 960px) {
+  .nav-dropbtn {
+    display: none; } }
+
+@media only screen and (min-width: 960px) {
+  .nav-dropbtn {
     display: none; } }
 
 @media only screen and (min-width: 320px) and (max-width: 768px) {
