--- a/Fooseshoes/Fooseshoes.WebSite/css/slider.css
+++ b/Fooseshoes/Fooseshoes.WebSite/css/slider.css
@@ -1,5 +1,20 @@
-﻿.icon-bar {
+﻿.wrapper {
+  display: flex;
+  height: 80px; }
+
+.text-wrapper {
+  padding: 0px 10px;
+  white-space: nowrap; }
+
+.product-price {
+  margin-top: 10px; }
+
+.icon-bar {
   display: flex; }
+  @media only screen and (min-width: 320px) and (max-width: 768px) {
+    .icon-bar {
+      width: 160px;
+      height: 32px; } }
   @media only screen and (min-width: 768px) and (max-width: 960px) {
     .icon-bar {
       width: 160px;
@@ -19,9 +34,15 @@
   font-size: 14px;
   width: 35px;
   height: 35px; }
+  @media only screen and (min-width: 320px) and (max-width: 768px) {
+    .slider-image-icon {
+      padding: 6px 5px 5px 8px;
+      font-size: 11px;
+      width: 28px;
+      height: 28px; } }
   @media only screen and (min-width: 768px) and (max-width: 960px) {
     .slider-image-icon {
-      padding: 5px 5px 5px 8px;
+      padding: 6px 5px 5px 8px;
       font-size: 11px;
       width: 28px;
       height: 28px; } }
@@ -38,20 +59,27 @@
 .slider-icon:hover {
   color: #57c5a0; }
 
-.price {
+.price, .product-price {
   background: #57c5a0;
   font-family: Logo-btns;
   color: white;
   text-align: center; }
+  @media only screen and (min-width: 320px) and (max-width: 768px) {
+    .price, .product-price {
+      margin-bottom: 10px;
+      padding-top: 17px;
+      font-size: 11px;
+      width: 48px;
+      height: 44px; } }
   @media only screen and (min-width: 768px) and (max-width: 960px) {
-    .price {
+    .price, .product-price {
       margin-bottom: 10px;
       padding-top: 17px;
       font-size: 11px;
       width: 48px;
       height: 44px; } }
   @media only screen and (min-width: 960px) {
-    .price {
+    .price, .product-price {
       margin-bottom: 13px;
       padding-top: 21px;
       font-size: 13px;
@@ -60,6 +88,11 @@
 
 .slider-text-header {
   font-family: Logo; }
+  @media only screen and (min-width: 320px) and (max-width: 768px) {
+    .slider-text-header {
+      font-size: 24px;
+      line-height: 24px;
+      width: 80%; } }
   @media only screen and (min-width: 768px) and (max-width: 960px) {
     .slider-text-header {
       font-size: 24px;
@@ -85,13 +118,19 @@
       line-height: 20px;
       padding-right: 82px; } }
 
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+  .slider-text {
+    padding: 5% 10% 10% 10%; } }
+
 @media only screen and (min-width: 768px) and (max-width: 960px) {
   .slider-text {
-    padding: 32px 70px 0px 350px; } }
+    padding: 32px 0px 0px 350px;
+    width: 768px; } }
 
 @media only screen and (min-width: 960px) {
   .slider-text {
-    padding: 40px 80px 0px 515px; } }
+    padding: 40px 0px 0px 515px;
+    width: 960px; } }
 
 .slider-status-legend-header, .slider-status-legend-header-active {
   font-family: Logo-btns;
@@ -104,7 +143,6 @@
 
 .slider-status-legend {
   font-family: Logo-btns;
-  font-size: 9px;
   color: #979797;
   font-size: 11px;
   line-height: 0px; }
@@ -112,9 +150,35 @@
 .slides {
   display: none; }
 
-.slides-active {
-  background-image: url("../images/background.jpg");
+.product-slide {
+  background: url("../images/background.jpg") no-repeat;
   display: flex; }
+  @media only screen and (min-width: 320px) and (max-width: 768px) {
+    .product-slide {
+      background: url("../images/background.jpg") no-repeat;
+      display: flex;
+      background-position: bottom left 25%;
+      height: 185px; } }
+  @media only screen and (min-width: 768px) and (max-width: 960px) {
+    .product-slide {
+      width: 768px;
+      background-position: bottom left;
+      height: 195px; } }
+  @media only screen and (min-width: 960px) {
+    .product-slide {
+      width: 960px;
+      background-position: bottom left;
+      height: 210px; } }
+
+.slides-active {
+  background: url("../images/background.jpg") no-repeat;
+  display: flex; }
+  @media only screen and (min-width: 320px) and (max-width: 768px) {
+    .slides-active {
+      background: url("../images/background.jpg") no-repeat;
+      display: flex;
+      height: 315px;
+      background-position: top left 25%; } }
   @media only screen and (min-width: 768px) and (max-width: 960px) {
     .slides-active {
       width: 768px;
@@ -170,6 +234,9 @@
   height: 70px;
   background-color: #2e2e2e;
   display: flex; }
+  @media only screen and (min-width: 320px) and (max-width: 768px) {
+    #slider {
+      display: none; } }
   @media only screen and (min-width: 768px) and (max-width: 960px) {
     #slider {
       width: 768px;
